add main class for simpler profiling in intelliJ and some minor refactorings